[package]
name = "bevy_game"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 0
debug = true
incremental = true

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
strip = true
debug = false

[dependencies]
bevy = "0.15"
backtrace = "0.3.74"
bevy-inspector-egui = "0.29.1"
chrono = "0.4"
image = "0.25.5"
