[package]
name = "bevy_game"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 0
debug = true
incremental = true

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
strip = true
debug = false

[dependencies]
bevy = "0.15"
backtrace = "0.3.74"
bevy-inspector-egui = "0.29.1"
bevy_audio = "0.15.3"
chrono = "0.4"
image = "0.25.5"
bincode = "1.3"
serde = "1.0"
obj-rs = "0.7.0"
wavefront_obj = "5.0.0"
